@startuml ShopManagementSystem

class Produkt {
  -id: int
  -nazwa: String
  -cena: double
  -ilosc: int
  --
  +dodajIlosc(int)
  +usunIlosc(int)
  +getSzczegoly(): String
}

class Klient {
  -imieNazwisko: String
  -email: String
  -portfel: double
  --
  +zakup(double): boolean
  +getDane(): String
}

class KlientStaly {
  -rabat: double
  --
  +obliczRabat(double): double
}

class Magazyn {
  -produkty: List<Produkt>
  --
  +dodajProdukt(Produkt)
  +znajdzProdukt(int): Produkt
  +aktualizujStan(): void
}

class Koszyk {
  -pozycje: List<PozycjaKoszyka>
  -klient: Klient
  --
  +dodajProdukt(Produkt, int)
  +obliczSuma(): double
  +finalizujZakup(): boolean
}

class PozycjaKoszyka {
  -produkt: Produkt
  -ilosc: int
  --
  +getSumaCzesciowa(): double
}

' Relacje między klasami
KlientStaly --|> Klient
Koszyk "1" *-- "1" Klient
Koszyk "1" *-- "0..*" PozycjaKoszyka
PozycjaKoszyka "1" --> "1" Produkt
Magazyn "1" --> "0..*" Produkt

@enduml